--- a/src/ImageReviewer/ImageReviewer/MainWindow.xaml
+++ b/src/ImageReviewer/ImageReviewer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ImageReviewer.MainWindow"
+﻿<Window x:Class="ImageReviewerApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,13 +11,14 @@
         <Canvas Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray"/>
 
         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,15">
+            <Button Name="btnLoad" Content="Load" Width="100" Margin=" 10" Click="BtnLoad_Click" />
             <Button Name="btnPrevious" Content="Previous" Width="100" Margin="10" Click="BtnPrevious_Click"/>
-            <Button Name="btnYes" Content="Y_es" Width="100" Margin="10" Click="BtnYes_Click" />
-            <Button Name="btnNo" Content="N_o" Width="100" Margin="10" Click="BtnNo_Click"/>
+            <Button Name="btnYes" Content="Yes" Width="100" Margin="10" Click="BtnYes_Click" />
+            <Button Name="btnNo" Content="No" Width="100" Margin="10" Click="BtnNo_Click"/>
             <Button Name="btnNext" Content="Next" Width="100" Margin="10" Click="BtnNext_Click"/>
             <Button Name="btnSave" Content="Save" Width="100" Margin="10" Click="BtnSave_Click"/>
         </StackPanel>
-        <TextBlock Name="lblStatus" Text="Loading..." HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5"/>
+        <TextBlock Name="lblStatus" Text="Use the 'Load' buton to open a yolo yaml file." HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5"/>
 
     </Grid>
 </Window>
